--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Salvium Network Statistics</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link rel="icon" type="image/x-icon" href="https://siko-ctrl.github.io/salvium/assets/img/favicon.ico">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
     <div class="container">
@@ -74,9 +74,9 @@
     </div>
 
     <footer>
-        <p>Powered by <a href="https://siko-ctrl.github.io/salvium/" target="_blank">Salvium Network</a></p>
+        <p>Powered by Salvium Network</p>
     </footer>
 
-    <script src="app.js" defer></script>
+    <script src="app.js"></script>
 </body>
 </html>
