--- a/index.html
+++ b/index.html
@@ -70,6 +70,20 @@
             </div>
         </div>
 
+        <section class="yield-section">
+            <h2>Yield Statistics</h2>
+            <div id="yieldSection">
+                <!-- Yield stats will be populated here -->
+            </div>
+        </section>
+
+        <section class="blockchain-info">
+            <h2>Blockchain Information</h2>
+            <div id="blockchainInfo">
+                <!-- Blockchain info will be populated here -->
+            </div>
+        </section>
+
         <div id="error-display" class="error-display"></div>
     </div>
 
