--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <div class="network-status">
                 <span class="status-dot"></span>
                 <span class="status-text">Connecting...</span>
+                <span id="lastUpdate" class="last-update"></span>
             </div>
         </header>
 
